added playable html version of the game

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/home.css">
 
     <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– 
+  ––––––––––––––––––––––––––––––––––––––––––––––––––
     <link rel="icon" type="image/png" href="favicon.ico"> -->
 
     <!-- Open Graph -->
@@ -61,6 +61,16 @@
             </div>
         </div>
     </div>
+
+    <!-- game area -->
+
+    <div id="game" class="gameArea screen-only">
+        <div class="gameScreen">
+            <iframe id="gameScreen" align="middle" src="/game/pestarrest.html" height="620" scrolling="no" width="100%" padding="0" margin="0"></iframe>
+        </div>
+    </div>
+
+    <!-- end game area -->
 
 
 
