added download link for windows exe file

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="stores">
                     <div class="googleplaybutton"><a target="blank" href="https://play.google.com/store/apps/details?id=org.manaty.Pest Arrest"><img src="img/googleplay_button2.png" alt="Play Store"></a></div>
                     <div id="appStoreButton" class="appstorebutton"><a target="blank" href="https://itunes.apple.com/us/app/Pest Arrest/id1364352556"><img src="img/appstore_button.png" alt="App Store"></a></div>
-                    <div class="clearFloat">
+                    <div id="windowsStoreButton" class="windowsbutton"><a href="/download/PestArrest.zip" alt="Windows"><img src="img/windows_app_store.png" alt="Windows" download></a></div>
                     </div>
                 </div>
             </div>
